version/0.37/_sources/api/solver/_autosummary/settings/settings_8.rst.txt
:orphan:

.. _settings_8:

settings
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.settings_8
    :show-inheritance:

.. rubric:: Attributes

========================================   ============================================================

Attribute                                                                                       Summary

========================================   ============================================================
:ref:`momentum <momentum_3>`                     Allows to change momentum model variables or settings.

:ref:`turbulence <turbulence_2>`               Allows to change turbulence model variables or settings.

:ref:`thermal <thermal_2>`                        Allows to change thermal model variables or settings.

:ref:`radiation <radiation_3>`                  Allows to change radiation model variables or settings.

:ref:`species <species_7>`                        Allows to change species model variables or settings.

:ref:`discrete_phase <discrete_phase_3>`              Allows to change DPM model variables or settings.

:ref:`multiphase <multiphase_4>`               Allows to change multiphase model variables or settings.

:ref:`potential <potential>`                    Allows to change potential model variables or settings.

:ref:`structure <structure_1>`                  Allows to change structure model variables or settings.

:ref:`uds <uds>`                                      Allows to change UDS model variables or settings.

:ref:`icing <icing_1>`                              Allows to change icing model variables or settings.

:ref:`geometry <geometry_6>`                     Allows to change geometry model variables or settings.

:ref:`phase <phase_10>`                                              Domain name to define settings on.

========================================   ============================================================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`       'child_object_type' of mass_flow_inlet.

====================================================   ===========================================

